[package]
name = "counter"
version = "0.1.0"
authors = ["Matthew Nicholson <matt@matt-land.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.50"
euca = { git = "https://github.com/iamcodemaker/euca", branch = "typed-html", features = ['typed-html'] }
typed-html = "0.2"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
